registers, DRAM, and cache now populated in UI.

--- a/res/main.htm
+++ b/res/main.htm
@@ -32,8 +32,8 @@
             <td id="memory" class="outerColumn">
                 <!-- The memory column is split horizontally into lower level memory and the cache -->
                 <!-- LOWER MEMORY ROW -->
-                <div id="lowerMem" class="memoryRow">
-                    <b>LOWER MEMORY</b><br><br>
+                <div id="DRAM" class="memoryRow">
+                    <b>DRAM</b><br><br>
 
                     The minimum colouring problem asks for the smallest k to properly colour G. The k-colouring problem asks whether G can be properly coloured using at most k colours.
                     We call the subset of vertices that receive the same colour a colour class. It is easy to see that every colour
