Tried writing assembler with Python script and running it through here. Can't get it to work. Saving progress before attempting adifferent route

--- a/res/main.htm
+++ b/res/main.htm
@@ -41,9 +41,14 @@
                 PANEL<br />
                 CONTENT<br />
                 <br />
+
                 <button type="button" id="regsRefrshBtn">Refresh Registers</button><br />
                 <button type="button" id="dramRefrshBtn">Refresh DRAM</button><br />
                 <button type="button" id="cacheRefrshBtn">Refresh Cache</button><br />
+
+                <label for="filePathField">Enter an instructions file name:</label><br><br>
+                <input type="text" id="filePathField"><br />
+                <button type="button" id="uploadFileBtn">Upload Instructions File</button>
             </td>
         </tr>
 
