saving and loading memory object as .txt file now works

--- a/res/main.htm
+++ b/res/main.htm
@@ -18,7 +18,7 @@
         <!-- Second Row of Table: instructions, registers, DRAM, and Control Panel -->
         <tr>
             <!-- INSTRUCTIONS CELL -->
-            <td id="instrctnsCell" class="cntntCell" rowspan="3">content</td>
+            <td id="instrctnsCell" class="cntntCell" rowspan="3"></td>
 
             <!-- REGISTERS CELL -->
             <td id="regsCell" class="cntntCell" rowspan="3"></td>
@@ -39,12 +39,12 @@
                 <button type="button" id="uploadInstrBtn">Upload Instructions File</button><br />
                 <br />
 
-                <button type="button" id="saveProgState">Save Current Program State</button><br />
+                <button type="button" id="saveProgStateBtn">Save Current Program State</button><br />
                 <br />
 
                 <label for="filePathField">Enter a program state file name:</label><br><br>
                 <input type="text" id="progrStateUpload"><br />
-                <button type="button" id="uploadProgStateBtn">Upload Program State File</button>
+                <button type="button" id="readInProgStateBtn">Upload Program State File</button>
 
 
             </td>
