single step exectution works and automatically refreshes all panels except instructions (TODO) and control panel

--- a/res/main.htm
+++ b/res/main.htm
@@ -52,6 +52,7 @@
                 <label for="numStepsToRun">Enter number of steps to run for:</label><br><br>
                 <input type="text" id="numStepsToRun"><br />
                 <button type="button" id="runInstrs">Run Instructions For # Steps Above</button><br />
+                <button type="button" id="singleStep">Take A Single Step</button><br />
                 <br />
 
                 <input type="checkbox" id="cacheCheckBox">
