--- a/res/main.htm
+++ b/res/main.htm
@@ -34,6 +34,7 @@
                 <button type="button" id="dramRefrshBtn">Refresh DRAM</button><br />
                 <button type="button" id="spadRefrshBtn">Refresh SPAD</button><br />
                 <button type="button" id="cacheRefrshBtn">Refresh Cache</button><br />
+                <button type="button" id="prgrmRefrshBtn">REFRESH PROGRAM</button><br />
                 <br />
                 <br />
 
